--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   http: ^0.13.6
-  google_fonts: ^2.1.0
+  google_fonts: ^4.0.4
   flutter_easyloading: ^3.0.5
   font_awesome_flutter: ^10.4.0
+  image_picker: ^1.0.2
 
 dev_dependencies:
   flutter_test:
