--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   font_awesome_flutter: ^10.4.0
   image_picker: ^1.0.2
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
